--- a/_modules/index.html
+++ b/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; datasift 2.9.0 documentation</title>
+    <title>Overview: module code &mdash; datasift 2.10.0 documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '2.9.0',
+        VERSION:     '2.10.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.9.0 documentation" href="../index.html" /> 
+    <link rel="top" title="datasift 2.10.0 documentation" href="../index.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -35,7 +35,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">datasift 2.9.0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">datasift 2.10.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -56,6 +56,7 @@
 <li><a href="datasift/output_mapper.html">datasift.output_mapper</a></li>
 <li><a href="datasift/push.html">datasift.push</a></li>
 <li><a href="datasift/pylon.html">datasift.pylon</a></li>
+<li><a href="datasift/pylon_task.html">datasift.pylon_task</a></li>
 <li><a href="datasift/request.html">datasift.request</a></li>
 <li><a href="datasift/token.html">datasift.token</a></li>
 </ul>
@@ -88,7 +89,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">datasift 2.9.0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">datasift 2.10.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
